<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.hse.dalexiv.testtask.view.InputFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/urlInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <EditText
                android:id="@+id/editTextUrl"
                android:inputType="textUri"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/editTextHint" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonGo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonText" />
    </LinearLayout>
</FrameLayout>
